Avances con imagenes de card project, contenido y descripciones de imagen del proyecto 1

--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,7 @@
 
         <div class="project-card uxui-project card-1 fade-element">
           <a href="/Proyectos/ux-ui/project-1-uxui.html">
-            <img src="./images/Mockup_Portfolio.png" alt="UX/UI Project" class="project-image">
+            <img src="./images/Mockup_webMalala.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Portfolio Malala Soifer</h3>
           </a>
         </div>
@@ -96,28 +96,28 @@
 
         <div class="project-card uxui-project card-2 fade-element">
           <a href="/Proyectos/ux-ui/project-2-uxui.html">
-            <img src="./images/Screenshot_TIG.jpg" alt="UX/UI Project" class="project-image">
+            <img src="./images/Mockup_TIG.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">The integrity game </h3>
           </a>
         </div>
 
         <div class="project-card uxui-project card-3 fade-element">
           <a href="/Proyectos/ux-ui/project-3-uxui.html">
-            <img src="./images/Thumbnail.png" alt="UX/UI Project" class="project-image">
+            <img src="./images/Mockup_proyecto3.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Epicurean Escape</h3>
           </a>
         </div>
 
         <div class="project-card uxui-project card-4 fade-element">
           <a href="/Proyectos/ux-ui/project-4-uxui.html">
-            <img src="./images/thumbnail.jpg" alt="UX/UI Project" class="project-image">
+            <img src="./images/degradado BG_Realistic Laptop WIth Smartphone_2.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Architecture Website Design</h3>
           </a>
         </div>
 
         <div class="project-card uxui-project card-5 fade-element">
           <a href="/Proyectos/ux-ui/project-5-uxui.html">
-            <img src="./images/5.jpg" alt="UX/UI Project" class="project-image">
+            <img src="./images/SwapNow_2.png" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Swap Now</h3>
           </a>
         </div>
