--- a/Proyectos/ux-ui/project-5-uxui.html
+++ b/Proyectos/ux-ui/project-5-uxui.html
@@ -10,7 +10,7 @@
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
 
-  
+
 </head>
 
 <body>
@@ -70,117 +70,157 @@
     </div>
 
 
-    <!--
-<div class="project-media">
-  <video autoplay muted loop playsinline class="project-video">
-    <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
-    <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
-  </video>
-</div>
--->
+
+    <div class="project-media">
+      <video autoplay muted loop playsinline class="project-video">
+        <source src="../../videos/Swap Now flow interaction.mp4" type="video/mp4">
+        <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
+      </video>
+    </div>
+
 
     <div>
       <section class="project-challenge">
         <h2>The Challenge</h2>
         <p>Explain the problem you were trying to solve or the opportunity you identified.
-          What were the constraints? Who were the users? What were their needs?</p>
+          What were the constraints? Who were the users? What were their needs? Research Insights: Explain the problems
+          you identified through your research. You can mention the methods used (interviews, surveys, competitive
+          analysis).
+
+          Visuals: If you have user personas, empathy maps, or charts/graphs of research findings (e.g., "70% of users
+          struggled with X"), this is a good place to include them as images or small diagrams alongside the text. They
+          don't have to be UI designs, but rather evidence of your research.</p>
       </section>
     </div>
 
     <section class="project-process">
       <h2>The Process</h2>
       <p>Outline your design process. What research did you conduct? How did you
-        approach the problem? What design decisions did you make along the way?</p>
+        approach the problem? What design decisions did you make along the way?
+        User Flows: Show how users would navigate through the application to complete a key task. A flowchart is ideal
+        here.
+
+        Wireframes (Low and Mid-Fidelity): Present basic sketches or wireframes to demonstrate how information and
+        interaction were structured before adding visual design. You can show a progression (e.g., hand-drawn sketch ->
+        digital wireframe).
+
+        Information Architecture (IA) Diagrams / Site Maps: If the project required it, a map of how the information is
+        organized can be useful.
+
+        Prototypes (Link): If you have an interactive prototype in Figma, InVision, etc., this is the perfect place to
+        include a clear link ("View interactive prototype").
+
+        Design Decisions: Explain why you made certain decisions at this stage, based on your research or usability
+        principles.
+
+        Visuals: Include images of your user flows, wireframes, and other process artifacts here. These can be Figma
+        screenshots or drawings.</p>
     </section>
 
     <section class="project-gallery">
       <h2>Galería</h2>
       <div class="gallery-grid">
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
-        <img src="../../images/SwapNow.png" alt="Imagen 1" />
+          <img src="../../images/SwapNow.png" alt="Imagen 1" />
         </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
-       <img src="../../images/SwapNow.png" alt="Imagen 2" />
-       </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
-       <img src="../../images/SwapNow.png" alt="Imagen 3" />
-       </div>
-       <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
-       <img src="../../images/SwapNow.png" alt="Imagen 4" />
-       </div>      
+        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
+          <img src="../../images/SwapNow.png" alt="Imagen 2" />
+        </div>
+        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
+          <img src="../../images/SwapNow.png" alt="Imagen 3" />
+        </div>
+        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
+          <img src="../../images/SwapNow.png" alt="Imagen 4" />
+        </div>
       </div>
-      </section>
+    </section>
 
     <section class="project-result">
       <h2>The Solution</h2>
       <p>Describe your final design solution in detail. How does it address the initial
-        challenge? What features did you implement and why?</p>
+        challenge? What features did you implement and why?
+        Here, in addition to the final UI screens (which you had already planned), you can make a direct connection
+        between your research/wireframing process and the final solution.
+
+        Suggested Content:
+
+        How the final solution addresses the problems identified in the research.
+        If you conducted usability testing, mention the results here and how they informed the final adjustments.
+        How to integrate it visually:
+
+        Don't overdo it: You don't need to show every single wireframe. Select the most representative ones or those
+        that highlight a key point in your process.
+        Accompany with text: Each image of a wireframe, flow, or research artifact should be accompanied by a clear
+        explanation of what you are showing, why it's important, and what you learned from it.</p>
     </section>
 
     <div class="project-media">
-    <div class="project-media">
+      <div class="project-media">
         <img src="../../images/SwapNow.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
-    </div>
+      </div>
 
 
-    <section class="project-learnings">
-      <h2>Outcomes & Learnings</h2>
-      <p>What were the results of your project? Did it achieve its goals? What did you
-        learn from the process? What would you do differently next time?</p>
-    </section>
+      <section class="project-learnings">
+        <h2>Outcomes & Learnings</h2>
+        <p>What were the results of your project? Did it achieve its goals? What did you
+          learn from the process? What would you do differently next time?</p>
+      </section>
 
-    <!--Previous project| back to top | Next project-->
- 
-   <div class="project-navigation-section elegant-clean">
-  <a href="/Proyectos/ux-ui/project-4-uxui.html" class="nav-link">
-    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-left" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-    <span class="nav-text">Previous projects</span>
-  </a>
+      <!--Previous project| back to top | Next project-->
 
-  <a href="#" class="back-to-top-link" aria-label="Volver arriba">
-    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none" stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-    <span class="back-to-top-text">Back to top</span>
-  </a>
+      <div class="project-navigation-section elegant-clean">
+        <a href="/Proyectos/ux-ui/project-4-uxui.html" class="nav-link">
+          <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-left" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="18 15 12 9 6 15"></polyline>
+          </svg>
+          <span class="nav-text">Previous projects</span>
+        </a>
 
-  <a href="/Proyectos/ux-ui/project-6-uxui.html" class="nav-link">
-    <span class="nav-text">Next project </span>
-    <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-right" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-      <polyline points="18 15 12 9 6 15"></polyline>
-    </svg>
-  </a>
-</div>
-  
+        <a href="#" class="back-to-top-link" aria-label="Volver arriba">
+          <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none"
+            stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="18 15 12 9 6 15"></polyline>
+          </svg>
+          <span class="back-to-top-text">Back to top</span>
+        </a>
+
+        <a href="/Proyectos/ux-ui/project-6-uxui.html" class="nav-link">
+          <span class="nav-text">Next project </span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-right" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="18 15 12 9 6 15"></polyline>
+          </svg>
+        </a>
+      </div>
+
   </main>
 
   <!-- Footer with proper structure -->
-   <footer class="fade-element" id="footer">
-      <div class="footer-content">
-        <!-- FIXED: Updated navigation links to go back to main page sections -->
-        <ul class="footer-nav-links">
-          <li><a href="../../Index.html#about">About</a></li>
-          <li><a href="../../Index.html#projects">Projects</a></li>
-          <li><a href="../../Index.html#skills">Skills</a></li>
-          <li><a href="../../Index.html#contact">Contact</a></li>
-        </ul>
+  <footer class="fade-element" id="footer">
+    <div class="footer-content">
+      <!-- FIXED: Updated navigation links to go back to main page sections -->
+      <ul class="footer-nav-links">
+        <li><a href="../../Index.html#about">About</a></li>
+        <li><a href="../../Index.html#projects">Projects</a></li>
+        <li><a href="../../Index.html#skills">Skills</a></li>
+        <li><a href="../../Index.html#contact">Contact</a></li>
+      </ul>
 
-        <ul class="footer-social-links">
-          <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i
-                class="fab fa-behance"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i
-                class="fab fa-linkedin-in"></i></a></li>
-          <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
-        </ul>
+      <ul class="footer-social-links">
+        <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i
+              class="fab fa-behance"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i
+              class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
+      </ul>
 
-        <div class="footer-copyright">
-          <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
-          <p>Designed & Developed by Malala Soifer.</p>
-        </div>
+      <div class="footer-copyright">
+        <p>&copy; 2025 Malala Soifer. All rights reserved.</p>
+        <p>Designed & Developed by Malala Soifer.</p>
       </div>
-    </footer>
+    </div>
+  </footer>
 
 
   <!-- FIXED: Updated script path to be relative -->
@@ -189,16 +229,18 @@
   <!-- Lightbox -->
   <div id="customLightbox" class="custom-lightbox">
     <div class="lightbox-content">
-        <button class="lightbox-close" aria-label="Cerrar imagen expandida">
-    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
-        <line x1="18" y1="6" x2="6" y2="18"></line>
-        <line x1="6" y1="6" x2="18" y2="18"></line>
-    </svg>
-</button>
-        <img src="" alt="Expanded Image" class="lightbox-image">
-        <div class="lightbox-title"></div>
+      <button class="lightbox-close" aria-label="Cerrar imagen expandida">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="feather feather-x">
+          <line x1="18" y1="6" x2="6" y2="18"></line>
+          <line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+      </button>
+      <img src="" alt="Expanded Image" class="lightbox-image">
+      <div class="lightbox-title"></div>
     </div>
-</div>
+  </div>
 
 </body>
 
