--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -10,8 +10,6 @@
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
 
-
-
 </head>
 
 <body>
@@ -56,13 +54,15 @@
           <h2>Brief</h2>
           <p>As I transitioned into the digital design world, I needed a portfolio that could reflect both my past
             experience and my new direction. The challenge was to bring together my background in textile and graphic
-            design with my newly acquired UX/UI and frontend skills, all in one cohesive and meaningful space.</p>
+            design with my newly acquired UX/UI and frontend skills, all in one cohesive and meaningful space.
+          </p>
 
           <div class="project-ficha">
             <div><strong>Timeline:</strong> 3 meses</div>
             <div><strong>Service:</strong> UX/UI - Fron end Designer</div>
             <div><strong>Role:</strong> Principal Designer</div>
-            <div><strong>Tools:</strong> Visual Studio Code, HTML, CSS, JS, Figma, Photoshop, Illustrator, Video edition, GitHub</div>
+            <div><strong>Tools:</strong> Visual Studio Code, HTML, CSS, JS, Figma, Photoshop, Illustrator, Video
+              edition, GitHub</div>
           </div>
         </div>
       </section>
@@ -73,7 +73,8 @@
         <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
         <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
       </video>
-      <p class="video-description">Este video muestra la presentación completa del proyecto con detalles visuales y de interacción.</p>
+      <p class="video-description">Este video muestra la presentación completa del proyecto con detalles visuales y de
+        interacción.</p>
     </div>
 
 
@@ -93,8 +94,24 @@
       <p>Designing for yourself is never easy. It was hard to take a step back and look at my own work objectively.
         That’s why I regularly asked for feedback from friends and family. I wanted the site to feel simple yet
         personal, so I drew inspiration from other designers’ portfolios but always infused it with my own voice and
-        visual identity. I worked iteratively, trying out different layouts and interactions, while keeping
-        accessibility and clarity in mind.</p>
+        visual identity.
+        <br>
+        This project originally started as a basic assignment during my frontend course, where we built a portfolio
+        using a
+        predefined layout provided by the school. That early version helped me grasp the fundamentals, but it also
+        sparked a desire to go further—so I reimagined the entire project to build something more authentic and
+        reflective of my identity as a designer.
+        <br>
+        From a visual and UX perspective, I focused on creating a clean layout with generous white space, bold but
+        minimal design choices, and intentional use of typography and hierarchy. I avoided unnecessary color or visual
+        clutter to ensure the experience felt direct, organized, and distraction-free. My goal was for the design to
+        feel functional, elegant, and purposeful—reflecting both my approach and personality.
+        <br>
+        I worked iteratively, trying out different layouts and interactions, while keeping accessibility and clarity in
+        mind.<br>
+        I approached the design with a UX mindset first, but every UI decision—from color restraint to typographic
+        hierarchy—was made to support that goal of simplicity and ease of use.
+      </p>
     </section>
 
     <section class="project-gallery">
@@ -102,75 +119,107 @@
       <div class="gallery-grid">
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
           <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 1" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías visuales.</p>
+          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales.</p>
         </div>
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
           <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 2" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías visuales.</p>
-          
+          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales.</p>
+
         </div>
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
           <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 3" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías visuales.</p>
+          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales.</p>
         </div>
 
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
           <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 4" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías visuales.</p>
+          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales.</p>
         </div>
       </div>
     </section>
 
-    <section class="project-result">
-      <h2>The Solution (or Final Outcome — still in progress)</h2>
-      <p>The site is still evolving, but I’ve managed to build a solid structure that reflects who I am as a designer
-        today. It’s responsive, intuitive, and feels like me. It’s a space that I’m proud of—and a living project I’ll
-        keep improving.</p>
-    </section>
+    <section class="project-inspiration">
+      <h2>Visual Inspiration</h2>
+      <p>
+        Before diving into the design, I created a moodboard to guide the visual direction of my portfolio.
+        I was inspired by clean and bold layouts, with generous white space, minimal use of color,
+        and clear typographic hierarchy.
+      </p>
+      <p>
+        The goal was to avoid distraction and let the content speak for itself—creating a space that feels
+        intentional, functional, and aligned with my UX-first mindset. Every visual decision,
+        from the restrained palette to the structure of the layout, was made to support clarity and ease of use.
+      </p>
+       </section>
 
-    <div class="project-media">
+        
       <div class="project-media">
-        <img src="../../images/screenshot.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
-        <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías visuales.</p>
-      </div>
+        <div class="project-media img">
+          <img src="../../images/Inspirational Moodboards.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
+          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales.</p>
+        </div>
 
-      <section class="project-learnings">
-        <h2>Outcomes & Learnings</h2>
-        <ul>
-  <li>Designing for yourself is often more challenging than working for others, but also more rewarding.</li>
-  <li>I learned how important external feedback can be when trying to move forward during moments of doubt.</li>
-  <li>I discovered the value of stepping out of my comfort zone to build custom tools and solutions.</li>
-  <li>Most of all, I am proud to have created my portfolio entirely from scratch—as both a designer and a frontend developer.</li>
-</ul>
+   
+
+
+      <section class="project-result">
+        <h2>The Solution (or Final Outcome — still in progress)</h2>
+        <p>The site is still evolving, but I’ve managed to build a solid structure that reflects who I am as a designer
+          today. It’s responsive, intuitive, and feels like me. It’s a space that I’m proud of—and a living project I’ll
+          keep improving.</p>
       </section>
 
-      <!--Previous project| back to top | Next project-->
+      <div class="project-media">
+        <div class="project-media img">
+          <img src="../../images/screenshot.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
+          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales.</p>
+        </div>
 
-      <div class="project-navigation-section elegant-clean">
-        <a href="/Proyectos/ux-ui/project-6-uxui.html" class="nav-link">
-          <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-left" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-            <polyline points="18 15 12 9 6 15"></polyline>
-          </svg>
-          <span class="nav-text">Previous projects</span>
-        </a>
+        <section class="project-learnings">
+          <h2>Outcomes & Learnings</h2>
+          <ul>
+            <li>Designing for yourself is often more challenging than working for others, but also more rewarding.</li>
+            <li>I learned how important external feedback can be when trying to move forward during moments of doubt.
+            </li>
+            <li>I discovered the value of stepping out of my comfort zone to build custom tools and solutions.</li>
+            <li>Most of all, I am proud to have created my portfolio entirely from scratch—as both a designer and a
+              frontend developer.</li>
+          </ul>
+        </section>
 
-        <a href="#" class="back-to-top-link" aria-label="Volver arriba">
-          <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none"
-            stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-            <polyline points="18 15 12 9 6 15"></polyline>
-          </svg>
-          <span class="back-to-top-text">Back to top</span>
-        </a>
+        <!--Previous project| back to top | Next project-->
 
-        <a href="/Proyectos/ux-ui/project-2-uxui.html" class="nav-link">
-          <span class="nav-text">Next project </span>
-          <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-right" viewBox="0 0 24 24" fill="none"
-            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-            <polyline points="18 15 12 9 6 15"></polyline>
-          </svg>
-        </a>
-      </div>
+        <div class="project-navigation-section elegant-clean">
+          <a href="/Proyectos/ux-ui/project-6-uxui.html" class="nav-link">
+            <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-left" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="18 15 12 9 6 15"></polyline>
+            </svg>
+            <span class="nav-text">Previous projects</span>
+          </a>
+
+          <a href="#" class="back-to-top-link" aria-label="Volver arriba">
+            <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon back-to-top-arrow" viewBox="0 0 24 24" fill="none"
+              stroke="rgba(60, 60, 60, 0.5)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="18 15 12 9 6 15"></polyline>
+            </svg>
+            <span class="back-to-top-text">Back to top</span>
+          </a>
+
+          <a href="/Proyectos/ux-ui/project-2-uxui.html" class="nav-link">
+            <span class="nav-text">Next project </span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="arrow-icon rotate-right" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="18 15 12 9 6 15"></polyline>
+            </svg>
+          </a>
+        </div>
 
   </main>
 
