Nuevas imagenes cargadas en proyecto 1_web_portfolio

--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -118,24 +118,24 @@
       <h2>Galería</h2>
       <div class="gallery-grid">
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
-          <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 1" />
+          <img src="../../images/Before_Now.png" alt="Imagen 1" />
           <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
             visuales.</p>
         </div>
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
-          <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 2" />
+          <img src="../../images/Diagram.jpg" alt="Imagen 2" />
           <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
             visuales.</p>
 
         </div>
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
-          <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 3" />
+          <img src="../../images/site map_Sketch.jpg" alt="Imagen 3" />
           <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
             visuales.</p>
         </div>
 
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
-          <img src="../../images/Screenshot Portfolio.jpg" alt="Imagen 4" />
+          <img src="../../images/Low Fidelity wireframes.jpg" alt="Imagen 4" />
           <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
             visuales.</p>
         </div>
