--- a/Index.html
+++ b/Index.html
@@ -186,27 +186,34 @@
         <li>Textile & Graphic Design (Adobe Photoshop, Illustrator, InDesign, Canva)</li>
         <li>Emerging Technologies (Generative AI)</li>
         <li>Marketing Tools (Funneltopia)</li>
+        
       </ul>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="fade-element">
-      <h2>Let's connect!</h2>
-      <p>Have a project in mind or want to know more?<a href="mailto:tuemail@email.com">malalasoifer@gmail.com</a>
-      </p>
-      <p>Or follow me on <a href="https://www.behance.net/malalasoifer" target="_blank">Behance</a> |
-        <a href="https://www.linkedin.com/in/malalasoifer/" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/MaliSoi" target="_blank">GitHub</a>
-      </p>
+<section id="contact" class="fade-element">
+  <h2>Let's connect!</h2>
+  <p>Have a project in mind or want to know more? 
+    <a href="mailto:malalasoifer@gmail.com">malalasoifer@gmail.com</a>
+  </p>
+  <p>Or follow me on 
+    <a href="https://www.behance.net/malalasoifer" target="_blank">Behance</a> |
+    <a href="https://www.linkedin.com/in/malalasoifer/" target="_blank">LinkedIn</a> |
+    <a href="https://github.com/MaliSoi" target="_blank">GitHub</a>
+  </p>
 
-      <form id="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </section>
-  </main>
+  <form name="contact" method="POST" data-netlify="true" netlify id="contact-form">
+    <input type="hidden" name="form-name" value="contact">
+
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+
+    <button type="submit">Send</button>
+  </form>
+
+  </section>
+
 
   <!-- back to top -->
 
