Ajustes en estilos message contact form

--- a/Index.html
+++ b/Index.html
@@ -213,8 +213,8 @@
   </form>
 
   <!-- Success Message -->
-  <div id="success-message" style="display:none; margin-top: 1rem; color: green;">
-    ✅ Thank you! Your message has been sent.
+  <div id="success-message" style="display:none; margin-top: 1rem; color: #4d555b;">
+    Message received. Thanks for reaching out!
   </div>
 </section>
 
