--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
   <header class="fade-element">
     <nav class="navbar">
       <div class="logo">
-        <a href="/"> <img src="/images/LOGO NUEVO_semibold_gris.png" alt="Malala Soifer Logo"> </a>
+        <a href="/"> <img src="/images/Logo_2.png" alt="Malala Soifer Logo"> </a>
       </div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
