--- a/Proyectos/ux-ui/project-6-uxui.html
+++ b/Proyectos/ux-ui/project-6-uxui.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
       <div class="logo">
         <a href="../../index.html">
-          <img src="../../images/LOGO NUEVO_semibold_gris.png" alt="Malala Soifer Logo">
+          <img src="../../images/Logo_2.png" alt="Malala Soifer Logo">
         </a>
       </div>
       <ul class="nav-links">
