Ajustes de responsiveness

--- a/Index.html
+++ b/Index.html
@@ -28,21 +28,26 @@
 <body>
   <!-- Header -->
   <header class="fade-element">
-    <nav class="navbar">
-      <div class="logo">
-        <a href="/"> <img src="/images/Logo_2.png" alt="Malala Soifer Logo"> </a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <button id="profile-toggle" class="profile-toggle">Switch to Textile design</button>
+  <nav class="navbar">
+    <div class="logo">
+      <a href="/"> <img src="/images/Logo_2.png" alt="Malala Soifer Logo"> </a>
+    </div>
 
-    </nav>
-  </header>
+    <button class="hamburger-menu" aria-label="Abrir menú de navegación">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </button>
 
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+    <button id="profile-toggle" class="profile-toggle">Switch to Textile design</button>
+  </nav>
+</header>
   <main>
 
 
