--- a/Proyectos/ux-ui/project-6-uxui.html
+++ b/Proyectos/ux-ui/project-6-uxui.html
@@ -22,6 +22,13 @@
           <img src="../../images/Logo_2.png" alt="Malala Soifer Logo">
         </a>
       </div>
+
+       <button class="hamburger-menu" aria-label="Abrir menú de navegación">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+      </button>
+
       <ul class="nav-links">
         <li><a href="../../index.html#about">About</a></li>
         <li><a href="../../index.html#projects">Projects</a></li>
