Mas ajustes responsivos de la web

--- a/Index.html
+++ b/Index.html
@@ -28,25 +28,27 @@
 <body>
   <!-- Header -->
   <header class="fade-element">
-  <nav class="navbar">
-    <div class="logo">
-      <a href="/"> <img src="/images/Logo_2.png" alt="Malala Soifer Logo"> </a>
-    </div>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="/"> <img src="/images/Logo_2.png" alt="Malala Soifer Logo"> </a>
+        </div>
 
-    <button class="hamburger-menu" aria-label="Abrir menú de navegación">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </button>
+        <button class="hamburger-menu" aria-label="Abrir menú de navegación">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
 
-    <ul class="nav-links">
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-    <button id="profile-toggle" class="profile-toggle">Switch to Textile design</button>
-  </nav>
+        <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile design</button></li>
+        </ul>
+
+        <button id="profile-toggle-desktop" class="profile-toggle">Switch to Textile design</button>
+    </nav>
 </header>
   <main>
 
