--- a/Proyectos/ux-ui/project-5-uxui.html
+++ b/Proyectos/ux-ui/project-5-uxui.html
@@ -35,8 +35,9 @@
         <li><a href="../../index.html#projects">Projects</a></li>
         <li><a href="../../index.html#skills">Skills</a></li>
         <li><a href="../../index.html#contact">Contact</a></li>
+        <li class="profile-toggle-mobile"><button id="profile-toggle-menu" class="profile-toggle">Switch to Textile design</button></li>
       </ul>
-      <button id="profile-toggle" class="profile-toggle">Textile design</button>
+      <button id="profile-toggle-desktop" class="profile-toggle">Switch to Textile design</button>
     </nav>
   </header>
 
