Nueva imagen hero section

--- a/Index.html
+++ b/Index.html
@@ -60,7 +60,7 @@
         <p class="hero-description" id="hero-description">Explore my world between digital and textile. UX/UI, illustration, patterns, and more.</p>
       </div>
       <div class="image-content">
-        <img src="./images/MalalaSoifer38.jpg" alt="Your Profile Image" class="hero-image">
+        <img src="./images/MalalaSoifer38_edited.jpg" alt="Your Profile Image" class="hero-image">
       </div>
 
     </section>
