Ajustes de placeholders

--- a/Index.html
+++ b/Index.html
@@ -95,7 +95,7 @@
 
         <div class="project-card uxui-project card-1 fade-element">
           <a href="/Proyectos/ux-ui/project-1-uxui.html">
-            <img src="./images/Mockup_webMalala.png" alt="UX/UI Project" class="project-image">
+            <img src="./images/mockup_desktop & mobile.jpg" alt="UX/UI Project" class="project-image">
             <h3 class="project-title">Portfolio Malala Soifer</h3>
           </a>
         </div>
