--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -77,13 +77,11 @@
     </div>
 
     <div class="project-media">
-      <video autoplay muted loop playsinline class="project-video">
-        <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
-        <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
-      </video>
-      <p class="video-description">Este video muestra la presentación completa del proyecto con detalles visuales y de
-        interacción.</p>
-    </div>
+        <div class="project-media img">
+          <img src="../../images/mockup_desktop & mobile.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
+          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales.</p>
+        </div>
 
 
 
@@ -182,12 +180,14 @@
           keep improving.</p>
       </section>
 
-      <div class="project-media">
-        <div class="project-media img">
-          <img src="../../images/screenshot.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales.</p>
-        </div>
+        <div class="project-media">
+      <video autoplay muted loop playsinline class="project-video">
+        <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
+        <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
+      </video>
+      <p class="video-description">Este video muestra la presentación completa del proyecto con detalles visuales y de
+        interacción.</p>
+    </div>
 
         <section class="project-learnings">
           <h2>Outcomes & Learnings</h2>
