Cambios en hero section,Title, description, photo

--- a/Index.html
+++ b/Index.html
@@ -56,8 +56,9 @@
     <!-- Hero Section -->
     <section id="hero" class="fade-element">
       <div class="hero-content">
-        <h1 class="hero-title">MALALA SOIFER</h1>
-        <p class="hero-description" id="hero-description">Explore my world between digital and textile. UX/UI, illustration, patterns, and more.</p>
+        <h1 class="hero-title">Welcome!</h1>
+        <p class="hero-description" id="hero-description">
+Explore my world between digital and textile. UX/UI, illustration, patterns, and more.</p>
       </div>
       <div class="image-content">
         <img src="./images/MalalaSoifer38_edited.jpg" alt="Your Profile Image" class="hero-image">
