--- a/Index.html
+++ b/Index.html
@@ -249,9 +249,9 @@ Explore my world between digital and textile. UX/UI, illustration, patterns, and
       </ul>
 
       <ul class="footer-social-links">
-        <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i
+        <li><a href="https://www.behance.net/MalalaSoifer" target="_blank" aria-label="Behance"><i
               class="fab fa-behance"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i
+        <li><a href="https://www.linkedin.com/in/malalasoifer/?locale=en_US" target="_blank" aria-label="LinkedIn"><i
               class="fab fa-linkedin-in"></i></a></li>
         <li><a href="https://github.com/MaliSoi" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
         </li>
