--- a/Proyectos/ux-ui/project-5-uxui.html
+++ b/Proyectos/ux-ui/project-5-uxui.html
@@ -215,11 +215,13 @@
         <li><a href="../../Index.html#contact">Contact</a></li>
       </ul>
 
-      <ul class="footer-social-links">
-        <li><a href="https://www.behance.net/tu_usuario" target="_blank" aria-label="Behance"><i
+       <ul class="footer-social-links">
+        <li><a href="https://www.behance.net/MalalaSoifer" target="_blank" aria-label="Behance"><i
               class="fab fa-behance"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/tu_usuario" target="_blank" aria-label="LinkedIn"><i
+        <li><a href="https://www.linkedin.com/in/malalasoifer/?locale=en_US" target="_blank" aria-label="LinkedIn"><i
               class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="https://github.com/MaliSoi" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+        </li>
         <li><a href="mailto:malalasoifer@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a></li>
       </ul>
 
