--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -10,6 +10,10 @@
   <!-- CSS path to be relative from subfolder -->
   <link rel="stylesheet" href="../../css/styles.css">
 
+  <!-- swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
 </head>
 
 <body>
@@ -125,25 +129,21 @@
       <div class="gallery-grid">
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
           <img src="../../images/Before_Now.png" alt="Imagen 1" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales.</p>
+          <p class="project-caption">Before and actual high fidelity wireframe</p>
         </div>
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
           <img src="../../images/Diagram.jpg" alt="Imagen 2" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales.</p>
+          <p class="project-caption">Conceptual diagram for new web portfolio</p>
 
         </div>
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
           <img src="../../images/site map_Sketch.jpg" alt="Imagen 3" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales.</p>
+          <p class="project-caption">Site map for Malala Soifer website</p>
         </div>
 
         <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
           <img src="../../images/Low Fidelity wireframes.jpg" alt="Imagen 4" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales.</p>
+          <p class="project-caption">Low fidelity wireframes Malala Soifer website</p>
         </div>
       </div>
     </section>
@@ -265,20 +265,32 @@
 
 
   <!-- Lightbox -->
-  <div id="customLightbox" class="custom-lightbox">
-    <div class="lightbox-content">
-      <button class="lightbox-close" aria-label="Cerrar imagen expandida">
-        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
-          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-          class="feather feather-x">
-          <line x1="18" y1="6" x2="6" y2="18"></line>
-          <line x1="6" y1="6" x2="18" y2="18"></line>
-        </svg>
-      </button>
-      <img src="" alt="Expanded Image" class="lightbox-image">
-      <div class="lightbox-title"></div>
+  <!-- Lightbox -->
+<div id="customLightbox" class="custom-lightbox">
+  <div class="lightbox-content">
+    <button class="lightbox-close" aria-label="Cerrar imagen expandida">
+      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
+        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+        class="feather feather-x">
+        <line x1="18" y1="6" x2="6" y2="18"></line>
+        <line x1="6" y1="6" x2="18" y2="18"></line>
+      </svg>
+    </button>
+
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <!-- SE LLENA DESDE JS -->
+      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
     </div>
+
+    <div class="lightbox-title">Título</div>
   </div>
+</div>
+
+
 
 </body>
 
