--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -82,7 +82,8 @@
 
     <div class="project-media">
         <div class="project-media img">
-          <img src="../../images/mockup_desktop & mobile.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
+          <img src="../../images/mockup_desktop & mobile.jpg" alt="Proyecto 1" data-lightbox="single" data-title="Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
+            visuales." />
           <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
             visuales.</p>
         </div>
@@ -127,21 +128,21 @@
     <section class="project-gallery">
       <h2>Galería</h2>
       <div class="gallery-grid">
-        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 1">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Before and actual high fidelity wireframe">
           <img src="../../images/Before_Now.png" alt="Imagen 1" />
           <p class="project-caption">Before and actual high fidelity wireframe</p>
         </div>
-        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 2">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Conceptual diagram for new web portfolio">
           <img src="../../images/Diagram.jpg" alt="Imagen 2" />
           <p class="project-caption">Conceptual diagram for new web portfolio</p>
 
         </div>
-        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 3">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Site map for Malala Soifer website">
           <img src="../../images/site map_Sketch.jpg" alt="Imagen 3" />
           <p class="project-caption">Site map for Malala Soifer website</p>
         </div>
 
-        <div class="gallery-item" data-lightbox="gallery" data-title="Pantalla 4">
+        <div class="gallery-item" data-lightbox="gallery" data-title="Low fidelity wireframes Malala Soifer website">
           <img src="../../images/Low Fidelity wireframes.jpg" alt="Imagen 4" />
           <p class="project-caption">Low fidelity wireframes Malala Soifer website</p>
         </div>
@@ -165,9 +166,8 @@
         
       <div class="project-media">
         <div class="project-media img">
-          <img src="../../images/Inspirational Moodboards.png" alt="Proyecto 1" data-lightbox="single" data-title="Proyecto 1" />
-          <p class="project-caption">Wireframe inicial de mi portfolio personal, donde comencé a definir jerarquías
-            visuales.</p>
+          <img src="../../images/Inspirational Moodboards.png" alt="Proyecto 1" data-lightbox="single" data-title="Inspirational moodboard" />
+          <p class="project-caption">Inspirational moodboard</p>
         </div>
 
    
@@ -185,8 +185,7 @@
         <source src="../../videos/Video_presentacion.mp4" type="video/mp4">
         <p class="fallback-text">Este proyecto incluye un video, pero tu navegador no lo puede mostrar.</p>
       </video>
-      <p class="video-description">Este video muestra la presentación completa del proyecto con detalles visuales y de
-        interacción.</p>
+      <p class="video-description">Flow of the site</p>
     </div>
 
         <section class="project-learnings">
