Zoom effect on images

--- a/Proyectos/ux-ui/project-1-uxui.html
+++ b/Proyectos/ux-ui/project-1-uxui.html
@@ -102,14 +102,12 @@
 
     <section class="project-process">
       <h2>The Process</h2>
-      <p>Designing for yourself is never easy. It was hard to take a step back and look at my own work objectively.
-        That’s why I regularly asked for feedback from friends and family. I wanted the site to feel simple yet
+      <p>Designing for yourself is never easy.  I wanted the site to feel simple yet
         personal, so I drew inspiration from other designers’ portfolios but always infused it with my own voice and
         visual identity.
         <br>
         This project originally started as a basic assignment during my frontend course, where we built a portfolio
-        using a
-        predefined layout provided by the school. That early version helped me grasp the fundamentals, but it also
+        using a predefined layout provided by the school. That early version helped me grasp the fundamentals, but it also
         sparked a desire to go further—so I reimagined the entire project to build something more authentic and
         reflective of my identity as a designer.
         <br>
@@ -120,8 +118,6 @@
         <br>
         I worked iteratively, trying out different layouts and interactions, while keeping accessibility and clarity in
         mind.<br>
-        I approached the design with a UX mindset first, but every UI decision—from color restraint to typographic
-        hierarchy—was made to support that goal of simplicity and ease of use.
       </p>
     </section>
 
